# semantic-cinephile

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
cinephile_cli/: Cargo.toml
cinephile_cli/src/: main.rs
cinephile_core/: Cargo.toml
cinephile_core/src/: crawler.rs  embedder.rs  enricher.rs  lib.rs  models.rs  search.rs  store.rs
