[workspace]
members = [
    "cinephile_core",
    "cinephile_cli",
]
resolver = "2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (0.14.1 is stable)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each release
installers = ["shell", "powershell"]
# Target platforms to build binaries for
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater binary
install-updater = true

