[package]
name = "cinephile_cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/woodj/cinephile"
description = "A semantic local movie search CLI"
license = "MIT"
readme = "../README.md"


[dependencies]
cinephile_core = { path = "../cinephile_core" }
clap = { version = "4.4", features = ["derive"] }
tabled = "0.15"
indicatif = "0.17"
opener = "0.6"
directories = "5.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
